Add /user/search
